k8s_configurations/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-service
  name: frontend-service
  namespace: default
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  selector:
    run: frontend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-user-service
  name: backend-user-service
  namespace: default
spec:
  ports:
  - name: http-api1
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    run: backend-user
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-posts-service
  name: backend-posts-service
  namespace: default
spec:
  ports:
  - name: http-api2
    port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    run: backend-posts
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
