k8s_configurations/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: softlin.com.mx
    http:
      paths:
      - path: /*
        backend:
          serviceName: frontend-service
          servicePort: 80
  - host: api.softlin.com.mx
    http:
      paths:
      - path: /
        backend:
          serviceName: backend-user-service
          servicePort: 8000
  - host: api2.softlin.com.mx
    http:
      paths:
      - path: /
        backend:
          serviceName: backend-posts-service
          servicePort: 8001
  tls:
  - secretName: frontend-tls
    hosts:
    - softlin.com.mx
    - api.softlin.com.mx
